# wogra

./: .gitignore  BAPresentation.ipynb  ReadMe.rst  command.py  data_types.py  errno.nfo  exceptions.py  gitlap.py  global_logger.py  labscrap.py  main.py  repository.py  test_gitcrawl.py
c_lib/: CMakeLists.txt  def.h  error.c  list.c  main.c  re.c  string.c  string_array.c
utils/: parse_pattern.py
